@@ -6,6 +6,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	Tom Collins
 	- vchkpw: Fix problem in md5.h causing segfault in SMTP AUTH on 
 	  amd64. [964843, 958799]
+	- vpopmail.h: Add new error and flag defines from 5.5 series.
 
 5.4.8 - released 12-Nov-2004
 
